--- a/css/styles.css
+++ b/css/styles.css
@@ -988,6 +988,9 @@ input[type='checkbox'] {
 	padding-bottom: 0.5rem;
 	background-color: #113448;
 	text-align: center;
+	width: 100%;
+    bottom: 0;
+    position: fixed;
 }
 
 .copyright p,
