--- a/css/styles.css
+++ b/css/styles.css
@@ -988,9 +988,6 @@ input[type='checkbox'] {
 	padding-bottom: 0.5rem;
 	background-color: #113448;
 	text-align: center;
-	width: 100%;
-    bottom: 0;
-    position: fixed;
 }
 
 .copyright p,
@@ -1429,7 +1426,7 @@ a:hover.back-to-top {
 	}
 
 	.ex-basic-2 {
-		padding-bottom: 5rem;
+		/*padding-bottom: 5rem;*/
 	}
 	/* end of extra pages */
 }
